# vibe_coding_course-pm

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  Prompt.txt
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  database.py  main.py
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_api.py  test_auth.py
docs/: DATABASE.md  PLAN.md  code_review.md  schema.json
docs/ai/agents/: start.md  tasks.md
frontend/: AGENTS.md  playwright.config.ts  playwright.docker.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts
frontend/src/lib/hooks/: useBoard.ts  (+1 more)
frontend/test-results/: .last-run.json
frontend/test-results/chat_sidebar-AI-moves-a-card-via-chat-and-board-updates-chromium/: error-context.md
frontend/test-results/dnd_all_columns-drag-card-through-all-columns-left-to-right-chromium/: error-context.md
frontend/test-results/dnd_debug-move-card-to-another-column-and-persist-chromium/: error-context.md
frontend/test-results/dnd_debug-reorder-card-within-same-column-chromium/: error-context.md
frontend/test-results/dnd_empty_column-drag-card-into-an-empty-column-chromium/: error-context.md
frontend/tests/: chat_sidebar.spec.ts  dnd_all_columns.spec.ts  dnd_debug.spec.ts  dnd_empty_column.spec.ts  kanban.spec.ts
project_docs/agents/: main.md
scripts/: integration_test.sh  start.sh  stop.sh
(+8 files in other folders)
