[project]
name = "kanban-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
